# Parallel_Computing

./: README.md
MPI_Pthreads_Real/: ApplyingVtkMarchingCubes.c  ApplyingVtkMarchingCubes.cxx  ApplyingVtkMarchingCubes.cxx~  ApplyingVtkMarchingCubes.c~  CMakeLists.txt  CMakeLists.txt~
MPI_Pthreads_Real/15MPI_NO_FILES_15_THREADS/: OutPutFile.txt
MPI_Pthreads_Real/2MPI_NO_FILES_2_THREADS/: OutPutFile.txt
MPI_Pthreads_Real/4MPI_NO_FILES_4_THREADS/: OutPutFile.txt
MPI_Pthreads_Real/5MPI_NO_FILES_5_THREADS/: OutPutFile.txt
MPI_Pthreads_Real/6MPI_NO_FILES_6_THREADS/: OutPutFile.txt
MPI_Pthreads_Real/7MPI_NO_FILES_7_THREADS/: OutPutFile.txt
MPI_Pthreads_Real/8MPI_NO_FILES_8_THREADS/: OutPutFile.txt
MPI_files_No_Octree/: ApplyingVtkMarchingCubes.cxx  ApplyingVtkMarchingCubes.cxx~  CMakeLists.txt  README.txt
MPI_files_No_Octree/15MPI/MPI15ChildProcess_TrialNumber01/: ApplyingVtkMarchingCubes.0.def.z  ApplyingVtkMarchingCubes.1.events.z  ApplyingVtkMarchingCubes.10.events.z  ApplyingVtkMarchingCubes.2.events.z  ApplyingVtkMarchingCubes.3.events.z  ApplyingVtkMarchingCubes.4.events.z  ApplyingVtkMarchingCubes.5.events.z  ApplyingVtkMarchingCubes.6.events.z  ApplyingVtkMarchingCubes.7.events.z  ApplyingVtkMarchingCubes.8.events.z  ApplyingVtkMarchingCubes.9.events.z  ApplyingVtkMarchingCubes.a.events.z  ApplyingVtkMarchingCubes.b.events.z  ApplyingVtkMarchingCubes.c.events.z  ApplyingVtkMarchingCubes.d.events.z  ApplyingVtkMarchingCubes.e.events.z  ApplyingVtkMarchingCubes.f.events.z  ApplyingVtkMarchingCubes.thumb
MPI_files_No_Octree/15MPI/MPI15ChildProcess_TrialNumber010/: ApplyingVtkMarchingCubes.0.def.z  ApplyingVtkMarchingCubes.1.events.z  ApplyingVtkMarchingCubes.10.events.z  ApplyingVtkMarchingCubes.2.events.z  ApplyingVtkMarchingCubes.3.events.z  ApplyingVtkMarchingCubes.4.events.z  ApplyingVtkMarchingCubes.5.events.z  ApplyingVtkMarchingCubes.6.events.z  ApplyingVtkMarchingCubes.7.events.z  ApplyingVtkMarchingCubes.8.events.z  ApplyingVtkMarchingCubes.9.events.z  ApplyingVtkMarchingCubes.a.events.z  ApplyingVtkMarchingCubes.b.events.z  ApplyingVtkMarchingCubes.c.events.z  ApplyingVtkMarchingCubes.d.events.z  ApplyingVtkMarchingCubes.e.events.z  ApplyingVtkMarchingCubes.f.events.z  ApplyingVtkMarchingCubes.thumb
MPI_files_No_Octree/15MPI/MPI15ChildProcess_TrialNumber02/: ApplyingVtkMarchingCubes.0.def.z  ApplyingVtkMarchingCubes.1.events.z  ApplyingVtkMarchingCubes.10.events.z  ApplyingVtkMarchingCubes.2.events.z  ApplyingVtkMarchingCubes.3.events.z  ApplyingVtkMarchingCubes.4.events.z  ApplyingVtkMarchingCubes.5.events.z  ApplyingVtkMarchingCubes.6.events.z  ApplyingVtkMarchingCubes.7.events.z  ApplyingVtkMarchingCubes.8.events.z  ApplyingVtkMarchingCubes.9.events.z  ApplyingVtkMarchingCubes.a.events.z  ApplyingVtkMarchingCubes.b.events.z  ApplyingVtkMarchingCubes.c.events.z  ApplyingVtkMarchingCubes.d.events.z  ApplyingVtkMarchingCubes.e.events.z  ApplyingVtkMarchingCubes.f.events.z  ApplyingVtkMarchingCubes.thumb
MPI_files_No_Octree/PolyDataToImageData/: ApplyingVtkMarchingCubes.cxx  ApplyingVtkMarchingCubes.cxx~  CMakeLists.txt~  Doxyfile  Doxyfile~  PolyDataToImageData.cxx  PolyDataToImageData.cxx~
MPI_files_No_Octree/html/: ApplyingVtkMarchingCubes_8cxx.html  files.html  globals.html  globals_func.html  index.html
MPI_files_No_Octree/latex/: ApplyingVtkMarchingCubes_8cxx.tex  doxygen.sty  files.tex  refman.tex
Serial_No_Files_Real/: ApplyingVtkMarchingCubes.cxx  ApplyingVtkMarchingCubes.cxx~  CMakeLists.txt  CMakeLists.txt~
Serial_Test/: ApplyingVtkMarchingCubes.cxx  ApplyingVtkMarchingCubes.cxx~  CMakeCache.txt  CMakeLists.txt  Makefile  MeshLabelImageColor.py  MeshLabelImageColor.py~  README.txt  README.txt~  cmake_install.cmake  howdy.mhd  howdy.zraw  letsGo.mhd
Serial_Test/PolyDataToImageData/: CMakeLists.txt~  PolyDataToImageData.cxx  PolyDataToImageData.cxx~
Test_serial_break/PolyDataToImageData/: CMakeLists.txt  PolyDataToImageData.cxx  PolyDataToImageData.cxx~
pthread_Real/PolyDataToImageData/: CMakeLists.txt  CMakeLists.txt~  PolyDataToImageData.cxx  PolyDataToImageData.cxx~
(+12276 files in other folders)
